# screenpy

./: .cruft.json  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  HISTORY.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: cruft.yml  lint.yml  poetry.yml  publish.yml  tests.yml
docs/: api.rst  conf.py  context.rst  cookbook.rst  debugging.rst  deprecations.rst  director.rst  example.rst  exceptions.rst  filehierarchy.rst  index.rst  installation.rst  narration.rst  narrator.rst  philosophy.rst  quickstart.rst  rtd-requirements.txt  settings.rst  toolkit.rst
docs/api/: actions.rst  actors.rst  exceptions.rst  narrator.rst  pacing.rst  protocols.rst  resolutions.rst
docs/example/: abilities.rst  actions.rst  actors.rst  adapters.rst  all_together.rst  questions.rst  resolutions.rst  tasks.rst
docs/ext/: autodoc_skip_protocols.py
docs/module/: abilities.rst  actions.rst  actors.rst  chaining.rst  debugging.rst  protocols.rst  questions.rst  resolutions.rst  targets.rst  waiting.rst
docs/source/: conf.py  context.rst  filehierarchy.rst  global.rst  index.rst
docs/source/module/: resolutions.rst  targets.rst
docs/topics/: abilities.rst  actions.rst  actors.rst  chaining.rst  director.rst  protocols.rst  questions.rst  resolutions.rst  targets.rst  waiting.rst
examples/: README.md
examples/github/: README.md  __init__.py
examples/github/features/: test_github_search.py
examples/github/questions/: number_of_search_results.py  search_results.py  search_results_message.py
examples/github/tasks/: search_github.py  start.py
examples/github/user_interface/: github_header_bar.py  github_home_page.py  github_search_results_page.py
examples/httpbin/: urls.py
examples/httpbin/features/: conftest.py  test_auth.py  test_cookies.py  test_methods.py
examples/the_internet/: README.md
examples/the_internet/features/: test_add_remove_elements.py  test_alerts.py  test_drag_and_drop.py  test_dropdowns.py  test_frames.py  test_key_presses.py  test_multiple_windows.py
examples/the_internet/tasks/: start.py
examples/the_internet/user_interface/: add_remove_elements.py  drag_and_drop.py  dropdown.py  homepage.py  iframe.py  javascript_alerts.py  key_presses.py  multiple_windows.py
screenpy/: __init__.py  __version__.py  actor.py  configuration.py  decorators.py  directions.py  director.py  exceptions.py  given_when_then.py  pacing.py  protocols.py  py.typed  resolutions.py  settings.py  speech_tools.py  target.py  test_utils.py
screenpy/abilities/: __init__.py  authenticate_with_2fa.py  base_ability.py  browse_the_web.py  make_api_requests.py
screenpy/actions/: __init__.py  accept_alert.py  add_header.py  attach_the_file.py  base_action.py  chain.py  clear.py  click.py  debug.py  dismiss_alert.py  double_click.py  either.py  enter.py  enter_2fa_token.py  eventually.py  go_back.py  go_forward.py  hold_down.py  log.py  make_note.py  move_mouse.py  open.py  pause.py  quietly.py  refresh_page.py  release.py  respond_to_the_prompt.py  right_click.py  save_console_log.py  save_screenshot.py  see.py  see_all_of.py  see_any_of.py  select.py  send_api_request.py  set_headers.py  silently.py  switch_to.py  switch_to_tab.py  tryto.py  (+1 more)
screenpy/actions/api/: __init__.py  send_api_request.py  send_delete_request.py  send_get_request.py  send_head_request.py  send_options_request.py  send_patch_request.py  send_post_request.py
screenpy/actions/web/: __init__.py  debug.py  enter.py  hold_down.py  move_mouse.py  pause.py  release.py  respond_to_the_prompt.py  right_click.py  switch_to_tab.py  wait.py
screenpy/actors/: actor.py  entrance_lines.py
screenpy/narration/: __init__.py  gravitas.py  narrator.py
screenpy/narration/adapters/: __init__.py  allure_adapter.py  settings.py  stdout_adapter.py
screenpy/narration/stdout_adapter/: __init__.py  configuration.py  stdout_adapter.py
screenpy/questions/: __init__.py  attribute.py  base_question.py  body_of_the_last_response.py  browser_title.py  browser_url.py  cookies.py  element.py  headers_of_the_last_response.py  list.py  number.py  selected.py  status_code_of_the_last_response.py  text.py  text_of_the_alert.py
screenpy/questions/web/: text.py
screenpy/resolutions/: __init__.py  base_resolution.py  contains_item_matching.py  contains_the_entry.py  contains_the_item.py  contains_the_key.py  contains_the_text.py  contains_the_value.py  empty.py  ends_with.py  has_length.py  is_clickable.py  is_close_to.py  is_empty.py  is_equal_to.py  is_greater_than.py  is_greater_than_or_equal_to.py  is_in_range.py  is_less_than.py  is_less_than_or_equal_to.py  is_not.py  is_visible.py  matches.py  reads_exactly.py  starts_with.py
screenpy/resolutions/custom_matchers/: __init__.py  has_method_with_return_value.py  is_clickable_element.py  is_in_bounds.py  is_visible_element.py  sequence_containing_pattern.py
tests/: conftest.py  test__version__.py  test_abilities.py  test_actions.py  test_actor.py  test_adapters.py  test_copyright.py  test_directions.py  test_director.py  test_integrations__actions.py  test_integrations__assertions.py  test_namespace.py  test_narration_integration.py  test_narrator.py  test_pacing.py  test_pacing_future.py  test_questions.py  test_resolutions.py  test_settings.py  test_speech_tools.py  test_target.py  unittest_protocols.py  useful_mocks.py
tests/api/: conftest.py  test_abilities.py  test_actions.py  test_integrations__actions.py  test_questions.py
tests/web/: conftest.py  test_abilities.py  test_actions.py  test_actor.py  test_integrations__actions.py  test_integrations__assertions.py  test_resolutions.py
